cmhk-service/cmhk-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cmhk-service
  namespace: cmhk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cmhk-service
  template:
    metadata:
      labels:
        app: cmhk-service
    spec:
      containers:
        - name: cmhk-service
          image: 'ghcr.io/meta-metopia/cmhk-service:v1.3.0'
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "300Mi"
              cpu: "200m"
          ports:
            - name: server-port
              containerPort: 3000
              protocol: TCP
      restartPolicy: Always
