cmhk-service/cmhk-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cmhk-service-service
  namespace: cmhk
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: cmhk-service
